<resources>
    <string name="app_name">Misbar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="poster">Poster</string>
    <string name="popular">Popular</string>
    <string name="back">Back</string>
    <string name="separator">•</string>
    <string name="produced_in">Produced in</string>
    <string name="text_synopsis">Synopsis</string>
    <string name="language">Language</string>
    <string name="revenue">Revenue</string>
    <string name="production">Production</string>
    <string name="share">Share</string>

    <string name="genre_banner">Genre Banner</string>
    <string name="explore">Explore</string>
    <string name="created_by">Created by</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="last_episode">Last Episode</string>
    <string name="next_episode">Next Episode</string>

    <string name="revenue_format">$%s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_favorite_items">Search for favorite items</string>
    <string name="not_found">It seems you don\'t have any favorites</string>
    <string name="favorite">Favorite</string>
    <string name="movies">Movies</string>
    <string name="all">All</string>
    <string name="shows">Shows</string>
</resources>